--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.11.0'
     implementation 'androidx.browser:browser:1.2.0'
+
+    // navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 }
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
