--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     ext {
         kotlin_version = '1.4.0-rc'
         navigation_version = '2.3.0'
+        room_version = '2.2.5'
+        archLifecycleVersion = '2.2.0'
+        coroutine_version = '1.3.8'
     }
     repositories {
         google()
