--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     // Groupie
     implementation 'com.xwray:groupie:2.3.0'
     implementation 'com.xwray:groupie-databinding:2.3.0'
+
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-alpha06'
 }
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
